Fix odd bug where "See full AP exam schedule" flickers when the seconds hand moves, and build
Fixes #203

--- a/css/main.css
+++ b/css/main.css
@@ -295,6 +295,7 @@ body #footer .footer-item.active {
   transform-origin: bottom;
   z-index: -1;
   transition: transform 0.2s cubic-bezier(0, 1.4, 1, 1.23);
+  will-change: transform;
 }
 #seconds.notransition::after {
   transition: none;
